--- a/MagicEightBall/MagicEightBallWcf.csproj
+++ b/MagicEightBall/MagicEightBallWcf.csproj
@@ -71,9 +71,7 @@
     <Compile Include="ImagicService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
